[gd_scene load_steps=5 format=2]

[ext_resource path="res://Minigame1/Assets/Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Minigame1/Minigame1_HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 42
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 41
font_data = ExtResource( 1 )

[node name="Minigame1_HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -15.0
margin_top = 6.4
margin_right = 15.0
margin_bottom = 54.4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = " 0"

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -41.0
margin_right = 95.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "START"

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -268.0
margin_right = 48.0
margin_bottom = -236.0

[connection signal="button_up" from="StartButton" to="." method="_on_StartButton_button_up"]
